# ponderada_maze

./: .gitignore  README.md
src/cg_cpp_client/: CMakeLists.txt  package.xml
src/cg_cpp_client/src/: get_map_client.cpp  part1_known_map.cpp  part2_mapping.cpp  part2_sensor.cpp
