<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cg_cpp_client</name>
  <version>0.0.0</version>
  <description>Cliente C++ para o serviço /get_map do pacote culling_games</description>
  <maintainer email="pietra@todo.todo">pietra</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend> <!-- adiciona dependência da biblioteca de cliente para ROS-->
  <depend>cg_interfaces</depend> <!-- adiciona dependência do pacote de interfaces personalizado-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
